# FlightDelayPredictor

./: .gitignore  README.md  flight_delay_data_kaggle.ipynb  pyproject.toml  requirements.txt  usa_flight_preprocessing.ipynb
data/kaggle/: flights_sample_100k.csv  flights_sample_10k.csv  flights_sample_2m.csv  flights_weather_final.parquet  master_weather_2019_2023.parquet
data/kaggle/processed/: flights_weather_final.parquet  master_weather_2019_2023.parquet
flnny_delay_data/: analize.py  linear_train.py  models.py  nn_train.py  utils.py  visualize.py  xgb_train.py
notebooks/exploratory/: flight_delay_data_kaggle.ipynb  weather.ipynb  weather_manager.py  weather_utils.py
resources/info/: df_info.json
resources/models/: linear_model.pkl  nn_model.pth  xgb_model.pkl
resources/stats/fc_linear_nn/: nn_metrics.json
resources/stats/linear_reg/: linear_metrics.json
resources/stats/xgb/: xgb_metrics.json
