[project]
name = "flightdelaypredictor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "meteostat>=2.1.3",
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
